--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,7 +1,17 @@
-/* .styled{float:right;
-     padding:10px 10px 10px 10px }
-@media only screen and (max-width: 400px) {
-    .styled{
-        float: inline-end;
+.styled {
+    font-size: small;
+    float: right;
+    padding: 10px 10px 0px 10px
+}
+
+@media only screen and (min-width: 400px) {
+    .styled {
+        font-size: medium;
+        float: right;
+        padding: 20px 10px 10px 10px
     }
-} */
+}
+
+.img{
+    float: right;
+}
